--- a/tests/integration/request/cassettes/test_request_service/TestRequestService.test_create_retrieve_delete_chat_record.yaml
+++ b/tests/integration/request/cassettes/test_request_service/TestRequestService.test_create_retrieve_delete_chat_record.yaml
@@ -17,17 +17,17 @@ interactions:
     uri: https://api.com/v2/text/chat?version=2024-03-06
   response:
     body:
-      string: '{"id":"02921117-9eff-4460-bad7-4c039e5973b3","model_id":"google/flan-t5-xl","created_at":"2024-03-06T19:38:22.404Z","results":[{"generated_text":"Good,
-        how can I can help you.","generated_token_count":10,"input_token_count":15,"stop_reason":"eos_token","seed":2913448318}],"conversation_id":"b0685906-78d2-4a0b-9715-f4ac2c59cd82"}'
+      string: '{"id":"89864bd9-5800-41a7-bc69-861032dfc81d","model_id":"google/flan-t5-xl","created_at":"2024-03-06T20:39:45.761Z","results":[{"generated_text":"No
+        problem Marvin. You okay?","generated_token_count":9,"input_token_count":15,"stop_reason":"eos_token","seed":3663552489}],"conversation_id":"ba1864fe-c5f7-4369-bd15-74a724af151a"}'
     headers:
       Connection:
       - keep-alive
       Date:
-      - Wed, 06 Mar 2024 19:38:22 GMT
+      - Wed, 06 Mar 2024 20:39:45 GMT
       Keep-Alive:
       - timeout=72
       content-length:
-      - '330'
+      - '328'
       content-type:
       - application/json; charset=utf-8
       content-version:
@@ -47,21 +47,21 @@ interactions:
       connection:
       - keep-alive
     method: GET
-    uri: https://api.com/v2/requests/chat/b0685906-78d2-4a0b-9715-f4ac2c59cd82?version=2024-03-06
+    uri: https://api.com/v2/requests/chat/ba1864fe-c5f7-4369-bd15-74a724af151a?version=2024-03-06
   response:
     body:
-      string: '{"results":[{"id":"02921117-9eff-4460-bad7-4c039e5973b3","duration":381,"request":{"messages":[{"role":"user","content":"Hello
-        Marvin, how are you today?"}],"model_id":"google/flan-t5-xl","parameters":{"max_new_tokens":10},"conversation_id":"b0685906-78d2-4a0b-9715-f4ac2c59cd82"},"status":"success","created_at":"2024-03-06T19:38:22.000Z","response":{"id":"02921117-9eff-4460-bad7-4c039e5973b3","results":[{"seed":2913448318,"stop_reason":"eos_token","generated_text":"Good,
-        how can I can help you.","input_token_count":15,"generated_token_count":10}],"model_id":"google/flan-t5-xl","created_at":"2024-03-06T19:38:22.404Z","conversation_id":"b0685906-78d2-4a0b-9715-f4ac2c59cd82"},"version":{"api":"v2","date":"2024-03-06"}}]}'
+      string: '{"results":[{"id":"89864bd9-5800-41a7-bc69-861032dfc81d","duration":385,"request":{"messages":[{"role":"user","content":"Hello
+        Marvin, how are you today?"}],"model_id":"google/flan-t5-xl","parameters":{"max_new_tokens":10},"conversation_id":"ba1864fe-c5f7-4369-bd15-74a724af151a"},"status":"success","created_at":"2024-03-06T20:39:46.000Z","response":{"id":"89864bd9-5800-41a7-bc69-861032dfc81d","results":[{"seed":3663552489,"stop_reason":"eos_token","generated_text":"No
+        problem Marvin. You okay?","input_token_count":15,"generated_token_count":9}],"model_id":"google/flan-t5-xl","created_at":"2024-03-06T20:39:45.761Z","conversation_id":"ba1864fe-c5f7-4369-bd15-74a724af151a"},"version":{"api":"v2","date":"2024-03-06"}}]}'
     headers:
       Connection:
       - keep-alive
       Date:
-      - Wed, 06 Mar 2024 19:38:23 GMT
+      - Wed, 06 Mar 2024 20:39:46 GMT
       Keep-Alive:
       - timeout=72
       content-length:
-      - '727'
+      - '725'
       content-type:
       - application/json; charset=utf-8
       content-version:
@@ -87,7 +87,7 @@ interactions:
       connection:
       - keep-alive
     method: DELETE
-    uri: https://api.com/v2/requests/chat/b0685906-78d2-4a0b-9715-f4ac2c59cd82?version=2023-11-22
+    uri: https://api.com/v2/requests/chat/ba1864fe-c5f7-4369-bd15-74a724af151a?version=2023-11-22
   response:
     body:
       string: ''
@@ -95,7 +95,7 @@ interactions:
       Connection:
       - keep-alive
       Date:
-      - Wed, 06 Mar 2024 19:38:24 GMT
+      - Wed, 06 Mar 2024 20:39:47 GMT
       Keep-Alive:
       - timeout=72
       content-length:
@@ -121,7 +121,7 @@ interactions:
       connection:
       - keep-alive
     method: GET
-    uri: https://api.com/v2/requests/chat/b0685906-78d2-4a0b-9715-f4ac2c59cd82?version=2024-03-06
+    uri: https://api.com/v2/requests/chat/ba1864fe-c5f7-4369-bd15-74a724af151a?version=2024-03-06
   response:
     body:
       string: '{"results":[]}'
@@ -129,7 +129,7 @@ interactions:
       Connection:
       - keep-alive
       Date:
-      - Wed, 06 Mar 2024 19:38:24 GMT
+      - Wed, 06 Mar 2024 20:39:48 GMT
       Keep-Alive:
       - timeout=72
       content-length:
