--- a/tests/integration/text/cassettes/test_feedback_service/TestFeedbackService.test_create_update_retrieve.yaml
+++ b/tests/integration/text/cassettes/test_feedback_service/TestFeedbackService.test_create_update_retrieve.yaml
@@ -17,7 +17,7 @@ interactions:
       Connection:
       - keep-alive
       Date:
-      - Thu, 29 Feb 2024 16:26:31 GMT
+      - Wed, 06 Mar 2024 20:38:52 GMT
       Keep-Alive:
       - timeout=72
       content-length:
@@ -49,17 +49,17 @@ interactions:
     uri: https://api.com/v2/text/generation?version=2024-01-10
   response:
     body:
-      string: '{"id":"e5bc097c-9fb0-4e2e-b776-3fd3eb0bf419","model_id":"google/flan-t5-xl","created_at":"2024-02-29T16:26:32.472Z","results":[{"generated_text":"Use
-        alcohol and acetylene, mix and set up a lab, buy lots of","generated_token_count":20,"input_token_count":7,"stop_reason":"max_tokens","seed":1321126076}]}'
+      string: '{"id":"96669514-8e01-4d0c-bd23-d6820ff1645d","model_id":"google/flan-t5-xl","created_at":"2024-03-06T20:38:53.551Z","results":[{"generated_text":"You
+        can turn coal into a drug by heating up the coal with a torch","generated_token_count":18,"input_token_count":7,"stop_reason":"eos_token","seed":2538902635}]}'
     headers:
       Connection:
       - keep-alive
       Date:
-      - Thu, 29 Feb 2024 16:26:32 GMT
+      - Wed, 06 Mar 2024 20:38:53 GMT
       Keep-Alive:
       - timeout=72
       content-length:
-      - '304'
+      - '308'
       content-type:
       - application/json; charset=utf-8
       content-version:
@@ -70,7 +70,8 @@ interactions:
       code: 200
       message: OK
 - request:
-    body: '{"categories": ["offensive_harmful"], "comment": "Drugs are bad mkay?"}'
+    body: '{"categories": ["offensive_harmful"], "comment": "Drugs are bad mkay?",
+      "contact_consent": false}'
     headers:
       accept:
       - '*/*'
@@ -79,24 +80,24 @@ interactions:
       connection:
       - keep-alive
       content-length:
-      - '71'
+      - '97'
       content-type:
       - application/json
     method: POST
-    uri: https://api.com/v2/text/generation/e5bc097c-9fb0-4e2e-b776-3fd3eb0bf419/feedback?version=2024-02-20
+    uri: https://api.com/v2/text/generation/96669514-8e01-4d0c-bd23-d6820ff1645d/feedback?version=2024-02-20
   response:
     body:
-      string: '{"result":{"id":402,"created_at":"2024-02-29T16:26:33.000Z","updated_at":"2024-02-29T16:26:33.000Z","comment":"Drugs
-        are bad mkay?","categories":["offensive_harmful"],"api_request":"e5bc097c-9fb0-4e2e-b776-3fd3eb0bf419"}}'
+      string: '{"result":{"id":452,"created_at":"2024-03-06T20:38:54.000Z","updated_at":"2024-03-06T20:38:54.000Z","comment":"Drugs
+        are bad mkay?","categories":["offensive_harmful"],"api_request":"96669514-8e01-4d0c-bd23-d6820ff1645d","contact_consent":false}}'
     headers:
       Connection:
       - keep-alive
       Date:
-      - Thu, 29 Feb 2024 16:26:33 GMT
+      - Wed, 06 Mar 2024 20:38:54 GMT
       Keep-Alive:
       - timeout=72
       content-length:
-      - '221'
+      - '245'
       content-type:
       - application/json; charset=utf-8
       content-version:
@@ -113,7 +114,8 @@ interactions:
       code: 200
       message: OK
 - request:
-    body: '{"categories": ["other_content"], "comment": "I''m not sure about the category"}'
+    body: '{"categories": ["other_content"], "comment": "I''m not sure about the category",
+      "contact_consent": false}'
     headers:
       accept:
       - '*/*'
@@ -122,24 +124,24 @@ interactions:
       connection:
       - keep-alive
       content-length:
-      - '79'
+      - '105'
       content-type:
       - application/json
     method: PUT
-    uri: https://api.com/v2/text/generation/e5bc097c-9fb0-4e2e-b776-3fd3eb0bf419/feedback?version=2024-02-20
+    uri: https://api.com/v2/text/generation/96669514-8e01-4d0c-bd23-d6820ff1645d/feedback?version=2024-02-20
   response:
     body:
-      string: '{"result":{"id":402,"created_at":"2024-02-29T16:26:33.000Z","updated_at":"2024-02-29T16:26:34.096Z","comment":"I''m
-        not sure about the category","categories":["other_content"],"api_request":"e5bc097c-9fb0-4e2e-b776-3fd3eb0bf419"}}'
+      string: '{"result":{"id":452,"created_at":"2024-03-06T20:38:54.000Z","updated_at":"2024-03-06T20:38:55.267Z","comment":"I''m
+        not sure about the category","categories":["other_content"],"api_request":"96669514-8e01-4d0c-bd23-d6820ff1645d","contact_consent":false}}'
     headers:
       Connection:
       - keep-alive
       Date:
-      - Thu, 29 Feb 2024 16:26:34 GMT
+      - Wed, 06 Mar 2024 20:38:55 GMT
       Keep-Alive:
       - timeout=72
       content-length:
-      - '229'
+      - '253'
       content-type:
       - application/json; charset=utf-8
       content-version:
@@ -165,20 +167,20 @@ interactions:
       connection:
       - keep-alive
     method: GET
-    uri: https://api.com/v2/text/generation/e5bc097c-9fb0-4e2e-b776-3fd3eb0bf419/feedback?version=2023-11-22
+    uri: https://api.com/v2/text/generation/96669514-8e01-4d0c-bd23-d6820ff1645d/feedback?version=2023-11-22
   response:
     body:
-      string: '{"result":{"id":402,"created_at":"2024-02-29T16:26:33.000Z","updated_at":"2024-02-29T16:26:34.000Z","comment":"I''m
-        not sure about the category","categories":["other_content"],"api_request":"e5bc097c-9fb0-4e2e-b776-3fd3eb0bf419"}}'
+      string: '{"result":{"id":452,"created_at":"2024-03-06T20:38:54.000Z","updated_at":"2024-03-06T20:38:55.000Z","comment":"I''m
+        not sure about the category","categories":["other_content"],"api_request":"96669514-8e01-4d0c-bd23-d6820ff1645d","contact_consent":false}}'
     headers:
       Connection:
       - keep-alive
       Date:
-      - Thu, 29 Feb 2024 16:26:34 GMT
+      - Wed, 06 Mar 2024 20:38:56 GMT
       Keep-Alive:
       - timeout=72
       content-length:
-      - '229'
+      - '253'
       content-type:
       - application/json; charset=utf-8
       content-version:
