feat(file): add update method, 'origin_id' parameter and schema

--- a/tests/integration/file/cassettes/test_file_service/TestFileService.test_create_retrieve_delete_file.yaml
+++ b/tests/integration/file/cassettes/test_file_service/TestFileService.test_create_retrieve_delete_file.yaml
@@ -18,21 +18,20 @@ interactions:
     uri: https://api.com/v2/files?version=2023-12-15
   response:
     body:
-      string: '{"result":{"id":"09462f6b-7b34-489a-9690-a9e66ce511d0","bytes":42,"file_name":"file.json","purpose":"template","storage_provider_location":"us-east","created_at":"2024-01-25T15:50:18.000Z","file_formats":[]}}'
+      string: '{"result":{"id":"28a0b804-0176-40d8-b0cb-386c9d7559d0","bytes":42,"file_name":"file.json","purpose":"template","storage_provider_location":"us-east","created_at":"2024-03-06T20:48:35.000Z","updated_at":"2024-03-06T20:48:35.000Z","file_formats":[],"descendants":[]}}'
     headers:
+      Connection:
+      - keep-alive
+      Date:
+      - Wed, 06 Mar 2024 20:48:34 GMT
+      Keep-Alive:
+      - timeout=72
       content-length:
-      - '208'
+      - '265'
       content-type:
       - application/json; charset=utf-8
       content-version:
       - '2023-12-15'
-      date:
-      - Thu, 25 Jan 2024 15:50:18 GMT
-      keep-alive:
-      - timeout=72
-      set-cookie:
-      - 2eef5f4c257f6bca76e8da5586743beb=538060a726cc3a9c230fa5d1269356eb; path=/;
-        HttpOnly; Secure; SameSite=None
       vary:
       - accept-encoding
       x-ratelimit-limit:
@@ -57,23 +56,58 @@ interactions:
     uri: https://api.com/v2/files?search=file.json&version=2023-12-15
   response:
     body:
-      string: '{"results":[{"id":"09462f6b-7b34-489a-9690-a9e66ce511d0","bytes":"42","file_name":"file.json","purpose":"template","storage_provider_location":"us-east","created_at":"2024-01-25T15:50:18.000Z","file_formats":[]}],"total_count":1}'
+      string: '{"results":[{"id":"28a0b804-0176-40d8-b0cb-386c9d7559d0","bytes":"42","file_name":"file.json","purpose":"template","storage_provider_location":"us-east","created_at":"2024-03-06T20:48:35.000Z","updated_at":"2024-03-06T20:48:35.000Z","file_formats":[],"descendants":[]}],"total_count":1}'
     headers:
-      cache-control:
-      - private
+      Connection:
+      - keep-alive
+      Date:
+      - Wed, 06 Mar 2024 20:48:35 GMT
+      Keep-Alive:
+      - timeout=72
       content-length:
-      - '229'
+      - '286'
       content-type:
       - application/json; charset=utf-8
       content-version:
       - '2023-12-15'
-      date:
-      - Thu, 25 Jan 2024 15:50:18 GMT
-      keep-alive:
+      vary:
+      - accept-encoding
+      x-ratelimit-limit:
+      - '25'
+      x-ratelimit-remaining:
+      - '24'
+      x-ratelimit-reset:
+      - '1'
+    status:
+      code: 200
+      message: OK
+- request:
+    body: ''
+    headers:
+      accept:
+      - '*/*'
+      accept-encoding:
+      - gzip, deflate
+      connection:
+      - keep-alive
+    method: GET
+    uri: https://api.com/v2/files/28a0b804-0176-40d8-b0cb-386c9d7559d0?version=2023-12-15
+  response:
+    body:
+      string: '{"result":{"id":"28a0b804-0176-40d8-b0cb-386c9d7559d0","bytes":"42","file_name":"file.json","purpose":"template","storage_provider_location":"us-east","created_at":"2024-03-06T20:48:35.000Z","updated_at":"2024-03-06T20:48:35.000Z","file_formats":[],"descendants":[]}}'
+    headers:
+      Connection:
+      - keep-alive
+      Date:
+      - Wed, 06 Mar 2024 20:48:36 GMT
+      Keep-Alive:
       - timeout=72
-      set-cookie:
-      - 2eef5f4c257f6bca76e8da5586743beb=6d247d6198597e887510d8e26f4d2793; path=/;
-        HttpOnly; Secure; SameSite=None
+      content-length:
+      - '267'
+      content-type:
+      - application/json; charset=utf-8
+      content-version:
+      - '2023-12-15'
       vary:
       - accept-encoding
       x-ratelimit-limit:
@@ -95,34 +129,76 @@ interactions:
       connection:
       - keep-alive
     method: GET
-    uri: https://api.com/v2/files/09462f6b-7b34-489a-9690-a9e66ce511d0?version=2023-12-15
+    uri: https://api.com/v2/files/28a0b804-0176-40d8-b0cb-386c9d7559d0/content?version=2023-11-22
   response:
     body:
-      string: '{"result":{"id":"09462f6b-7b34-489a-9690-a9e66ce511d0","bytes":"42","file_name":"file.json","purpose":"template","storage_provider_location":"us-east","created_at":"2024-01-25T15:50:18.000Z","file_formats":[]}}'
+      string: '{"data": "EXAMPLE TEMPLATE {{variable}}}"}'
     headers:
-      cache-control:
-      - private
-      content-length:
-      - '210'
-      content-type:
-      - application/json; charset=utf-8
-      content-version:
-      - '2023-12-15'
-      date:
-      - Thu, 25 Jan 2024 15:50:18 GMT
-      keep-alive:
+      Connection:
+      - keep-alive
+      Date:
+      - Wed, 06 Mar 2024 20:48:37 GMT
+      Keep-Alive:
       - timeout=72
-      set-cookie:
-      - 2eef5f4c257f6bca76e8da5586743beb=700aa432de0b7f84c4af912348660ec2; path=/;
-        HttpOnly; Secure; SameSite=None
+      Transfer-Encoding:
+      - chunked
+      content-length:
+      - '42'
+      content-type:
+      - application/json
+      content-version:
+      - '2023-11-22'
       vary:
       - accept-encoding
       x-ratelimit-limit:
       - '25'
       x-ratelimit-remaining:
-      - '22'
+      - '24'
       x-ratelimit-reset:
-      - '0'
+      - '1'
+    status:
+      code: 200
+      message: OK
+- request:
+    body: "--BOUNDARY\r\nContent-Disposition: form-data; name=\"file\"; filename=\"file_updated.json\"\r\nContent-Type:
+      application/json\r\n\r\n{\"data\": \"UPDATED EXAMPLE TEMPLATE {{variable}}}\"}\r\n--BOUNDARY--\r\n"
+    headers:
+      accept:
+      - '*/*'
+      accept-encoding:
+      - gzip, deflate
+      connection:
+      - keep-alive
+      content-length:
+      - '235'
+      content-type:
+      - multipart/form-data; boundary=BOUNDARY
+    method: PATCH
+    uri: https://api.com/v2/files/28a0b804-0176-40d8-b0cb-386c9d7559d0?version=2023-11-22
+  response:
+    body:
+      string: '{"result":{"id":"28a0b804-0176-40d8-b0cb-386c9d7559d0","bytes":50,"file_name":"file_updated.json","purpose":"template","storage_provider_location":"us-east","created_at":"2024-03-06T20:48:35.000Z","updated_at":"2024-03-06T20:48:39.417Z","file_formats":[],"descendants":[]}}'
+    headers:
+      Connection:
+      - keep-alive
+      Date:
+      - Wed, 06 Mar 2024 20:48:39 GMT
+      Keep-Alive:
+      - timeout=72
+      content-length:
+      - '262'
+      content-type:
+      - application/json; charset=utf-8
+      content-version:
+      - '2023-11-22'
+      vary:
+      - accept-encoding
+      x-ratelimit-limit:
+      - '25'
+      x-ratelimit-remaining:
+      - '24'
+      x-ratelimit-reset:
+      - '1'
     status:
       code: 200
       message: OK
@@ -136,28 +212,25 @@ interactions:
       connection:
       - keep-alive
     method: GET
-    uri: https://api.com/v2/files/09462f6b-7b34-489a-9690-a9e66ce511d0/content?version=2023-11-22
+    uri: https://api.com/v2/files/28a0b804-0176-40d8-b0cb-386c9d7559d0/content?version=2023-11-22
   response:
     body:
-      string: '{"data": "EXAMPLE TEMPLATE {{variable}}}"}'
+      string: '{"data": "UPDATED EXAMPLE TEMPLATE {{variable}}}"}'
     headers:
-      cache-control:
-      - private
+      Connection:
+      - keep-alive
+      Date:
+      - Wed, 06 Mar 2024 20:48:41 GMT
+      Keep-Alive:
+      - timeout=72
+      Transfer-Encoding:
+      - chunked
       content-length:
-      - '42'
+      - '50'
       content-type:
       - application/json
       content-version:
       - '2023-11-22'
-      date:
-      - Thu, 25 Jan 2024 15:50:19 GMT
-      keep-alive:
-      - timeout=72
-      set-cookie:
-      - 2eef5f4c257f6bca76e8da5586743beb=6d247d6198597e887510d8e26f4d2793; path=/;
-        HttpOnly; Secure; SameSite=None
-      transfer-encoding:
-      - chunked
       vary:
       - accept-encoding
       x-ratelimit-limit:
@@ -179,26 +252,25 @@ interactions:
       connection:
       - keep-alive
     method: DELETE
-    uri: https://api.com/v2/files/09462f6b-7b34-489a-9690-a9e66ce511d0?version=2023-11-22
+    uri: https://api.com/v2/files/28a0b804-0176-40d8-b0cb-386c9d7559d0?version=2023-11-22
   response:
     body:
       string: ''
     headers:
+      Connection:
+      - keep-alive
+      Date:
+      - Wed, 06 Mar 2024 20:48:42 GMT
+      Keep-Alive:
+      - timeout=72
       content-version:
       - '2023-11-22'
-      date:
-      - Thu, 25 Jan 2024 15:50:19 GMT
-      keep-alive:
-      - timeout=72
-      set-cookie:
-      - 2eef5f4c257f6bca76e8da5586743beb=ab61fe594e37cae048810df94b864b98; path=/;
-        HttpOnly; Secure; SameSite=None
       x-ratelimit-limit:
       - '25'
       x-ratelimit-remaining:
-      - '23'
+      - '24'
       x-ratelimit-reset:
-      - '0'
+      - '1'
     status:
       code: 204
       message: No Content
@@ -217,21 +289,18 @@ interactions:
     body:
       string: '{"results":[],"total_count":0}'
     headers:
-      cache-control:
-      - private
+      Connection:
+      - keep-alive
+      Date:
+      - Wed, 06 Mar 2024 20:48:43 GMT
+      Keep-Alive:
+      - timeout=72
       content-length:
       - '30'
       content-type:
       - application/json; charset=utf-8
       content-version:
       - '2023-12-15'
-      date:
-      - Thu, 25 Jan 2024 15:50:20 GMT
-      keep-alive:
-      - timeout=72
-      set-cookie:
-      - 2eef5f4c257f6bca76e8da5586743beb=538060a726cc3a9c230fa5d1269356eb; path=/;
-        HttpOnly; Secure; SameSite=None
       vary:
       - accept-encoding
       x-ratelimit-limit:
